# vetera

./: .gitignore  AGENTS.md  LICENSE  README.md  aster-admin-dashboard.html  biome.jsonc  chart-snapshot.yml  components.json  components.json.bak  dashboard-backup.tsx  eslint.config.js  generate-license.ts  index.html  package-lock.json  package.json  tmp-dashboard.tsx  tsconfig.app.json  vite.config.ts
.antigravitycli/: fab649cb-8656-42ce-9f21-ab1d2c6e7939.json
.github/workflows/: desktop-builds.yml  release-updater.yml
.playwright-mcp/: page-2026-04-17T14-58-07-167Z.yml
dashboard-prototype/: encaissements-comparison.html  encaissements-modern.html  portfolio-dashboard-simple.html  portfolio-dashboard-v2.html  portfolio-dashboard.html  portfolio-huashu.html  prototype.html  widget.html
docs/: SPRINT-2-RESUME.md  SPRINT-3-RESUME.md  SPRINT-4-RESUME.md  SPRINT-5-RESUME.md  SPRINT-6-RESUME.md  SPRINT-8-RESUME.md  macos-distribution.md  updates.md
docs/archives/: components.json.backup  dashboard.patch  index.css.backup2  tmp-dashboard.tsx
docs/design-references/: dashboard-snapshot.yml  protocol-resources-section.yml
public/migrations/: 001_initial_schema.sql  002_fix_admin_password.sql  003_secure_password.sql
src/: App.tsx  index.css  index.css.backup  main.tsx  types.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate-icon.js  icon.icns
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: lib.rs  main.rs
src/components/: AIAgentChat.tsx  Agenda.tsx  Auth.tsx  (+51 more)
(+261 files in other folders)
